modal and fix overflowX (index)

--- a/styles/photographer.scss
+++ b/styles/photographer.scss
@@ -4,19 +4,6 @@
 
 // layout
 
-#contact_modal {
-  display: flex;
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  background-color: #fff4;
-}
-
 #main {
   padding: 0 100px;
 }
@@ -118,91 +105,108 @@
     padding: 20px 23px;
     border-radius: 5px;
     option {
-      padding: inherit;
+      padding: 20px 23px;
     }
   }
 }
 
-.modal {
-  border-radius: 5px;
-  background-color: #db8876;
-  width: 50%;
-  max-height: 90vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 35px;
-  margin: auto;
+#contact_modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  background-color: #fff4;
+  overflow-y: scroll;
 
-  header {
-    justify-content: space-between;
-    width: 100%;
-  }
-
-  header img {
-    cursor: pointer;
-  }
-
-  header h2 {
-    font-size: 64px;
-    font-weight: normal;
-    text-align: center;
-  }
-  textarea {
-    width: 100%;
-    height: 140px;
-    resize: none;
+  .modal {
     border-radius: 5px;
-  }
-  textarea,
-  input {
-    font-size: 36px;
-    padding-left: 5px;
-  }
-}
-
-form {
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  align-items: flex-start;
-
-  label {
-    color: #312e2e;
-    font-size: 36px;
-  }
-
-  div {
+    background-color: #db8876;
+    // width: 50%;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    align-items: flex-start;
-  }
+    align-items: center;
+    padding: 35px;
+    margin: 25px;
+    height: fit-content;
 
-  input {
-    width: 100%;
-    height: 68px;
-    border: none;
-    border-radius: 5px;
-  }
+    header {
+      position: relative;
+      width: 100%;
+      height: fit-content;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      img {
+        cursor: pointer;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+      }
+      h2 {
+        text-align: left;
+        font-size: 64px;
+        font-weight: normal;
+      }
+    }
+    textarea {
+      width: 100%;
+      height: 140px;
+      resize: none;
+      border-radius: 5px;
+    }
+    textarea,
+    input {
+      font-size: 36px;
+      padding-left: 5px;
+    }
 
-  .formData[data-error]::after {
-    content: attr(data-error);
-    font-size: 16px;
-    color: #dd1428;
-    display: block;
-    margin-top: 7px;
-    margin-bottom: 7px;
-    text-align: left;
-    line-height: 0.3;
-    opacity: 0;
-    transition: 0.3s;
-  }
-  .formData[data-error-visible='true']::after {
-    opacity: 1;
-  }
-  .formData[data-error-visible='true'] .text-control {
-    border: 2px solid #e54858;
+    form {
+      display: flex;
+      width: 100%;
+      flex-direction: column;
+      align-items: flex-start;
+
+      label {
+        color: #312e2e;
+        font-size: 36px;
+      }
+
+      div {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: flex-start;
+        margin-bottom: 10px;
+      }
+
+      input {
+        width: 100%;
+        height: 68px;
+        border: none;
+        border-radius: 5px;
+      }
+
+      .formData[data-error]::after {
+        content: attr(data-error);
+        font-size: 16px;
+        color: #dd1428;
+        display: block;
+        margin-top: 7px;
+        margin-bottom: 7px;
+        text-align: left;
+        line-height: 0.3;
+        opacity: 0;
+        transition: 0.3s;
+      }
+      .formData[data-error-visible='true']::after {
+        opacity: 1;
+      }
+      .formData[data-error-visible='true'] .text-control {
+        border: 2px solid #e54858;
+      }
+    }
   }
 }
